# ai-commit

./: .ai-commit-ignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  prompt_plan.md  release.yml  todo.md
.github/workflows/: homebrew.yml  release.yml
src/: api.rs  cli.rs  cli_config.rs  commit_editor.rs  config_manager.rs  cost.rs  cost_estimation.rs  git.rs  ignore.rs  main.rs  prompt.rs
src/api/: anthropic.rs  openai.rs  provider.rs
src/diff/: mod.rs
