[package]
name = "ai-commit"
version = "0.7.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.10"
git2 = "0.20"
globset = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.10"
tiktoken-rs = "0.5"
clap = { version = "4.4", features = ["derive"] }
directories = "6.0.0"
anyhow = "1.0.98"
